--- a/Seminare/.classpath
+++ b/Seminare/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="seminar02"/>
+	<classpathentry kind="src" path="seminar04"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
