--- a/Seminare/.classpath
+++ b/Seminare/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="seminar02"/>
 	<classpathentry kind="src" path="seminar04"/>
+	<classpathentry kind="src" path="seminar05"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
