--- a/Seminare/.classpath
+++ b/Seminare/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="src" path="seminar02"/>
 	<classpathentry kind="src" path="seminar04"/>
 	<classpathentry kind="src" path="seminar05"/>
+	<classpathentry kind="src" path="seminar06"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
