--- a/Seminare/.classpath
+++ b/Seminare/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="src" path="seminar04"/>
 	<classpathentry kind="src" path="seminar05"/>
 	<classpathentry kind="src" path="seminar06"/>
+	<classpathentry kind="src" path="seminar09"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
