--- a/Seminare/.classpath
+++ b/Seminare/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="src" path="seminar05"/>
 	<classpathentry kind="src" path="seminar06"/>
 	<classpathentry kind="src" path="seminar09"/>
+	<classpathentry kind="src" path="seminar11"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
