--- a/Seminare/.classpath
+++ b/Seminare/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="src" path="seminar09"/>
 	<classpathentry kind="src" path="seminar11"/>
 	<classpathentry kind="src" path="seminar08"/>
+	<classpathentry kind="src" path="seminar10"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
